# mkdocs-scaffold

./: Makefile  README.md  pyproject.toml
project/: mkdocs.yml
project/docs/: examples.md  markdown.md
